[gd_scene load_steps=22 format=2]

[ext_resource path="res://art/HUD/hp_bar_filled.png" type="Texture" id=1]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://art/HUD/hp_bar_frame.png" type="Texture" id=3]
[ext_resource path="res://font/ChelseaMarket-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://art/HUD/unmuted_icon.png" type="Texture" id=5]
[ext_resource path="res://art/HUD/xp_bar_frame.png" type="Texture" id=6]
[ext_resource path="res://art/HUD/xp_bar_filled.png" type="Texture" id=7]
[ext_resource path="res://art/HUD/game_over_bk.png" type="Texture" id=8]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 water_color : hint_color;
uniform vec2 sprite_scale = vec2(1.0, 1.0);
uniform float scale_x = 1;
uniform float darkness = 1;

float rand(vec2 coord){
	return fract(sin(dot(coord, vec2(12.9898, 78.233)))* 43758.5453123);
}

float noise(vec2 coord){
	vec2 i = floor(coord);
	vec2 f = fract(coord);

	// 4 corners of a rectangle surrounding our point
	float a = rand(i);
	float b = rand(i + vec2(1.0, 0.0));
	float c = rand(i + vec2(0.0, 1.0));
	float d = rand(i + vec2(1.0, 1.0));

	vec2 cubic = f * f * (0.8 * f);

	return mix(a, b, cubic.x) + (c - a) * cubic.y * (1.0 - cubic.x) + (d - b) * cubic.x * cubic.y;
}

void fragment(){
	
	vec2 noisecoord1 = UV;
	vec2 noisecoord2 = UV + 4.0;
	
	vec2 motion1 = vec2(TIME * 0.3, TIME * -0.4);
	vec2 motion2 = vec2(TIME * 0.1, TIME * 0.5);
	
	vec2 distort1 = vec2(noise(noisecoord1 + motion1), noise(noisecoord2 + motion1)) - vec2(0.5);
	vec2 distort2 = vec2(noise(noisecoord1 + motion2), noise(noisecoord2 + motion2)) - vec2(0.5);
	
	vec2 distort_sum = (distort1 + distort2) / 100.0;
	
	vec4 color = textureLod(SCREEN_TEXTURE, SCREEN_UV + distort_sum, 0.0);
	
	color = mix(color, water_color, 0.3);
	color.rgb = mix(vec3(0.5), color.rgb, 1.4);
	
	float near_top = (UV.y + distort_sum.y) / (0.1 / sprite_scale.y);
	near_top = clamp(near_top, 0.0, 1.0);
	near_top = darkness - near_top;
	
	color = mix(color, vec4(0.5), near_top);
	
	float edge_lower = 0.3;
	float edge_upper = edge_lower + 0.1;
	
	
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/water_color = Color( 0, 0.960784, 1, 0 )
shader_param/sprite_scale = Vector2( 1, 1 )
shader_param/scale_x = 1.0
shader_param/darkness = 1.0

[sub_resource type="DynamicFont" id=3]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 28
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=11]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("game_over_trans:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "fade_in_transition"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("transition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("transition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="water" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="water"]

[node name="player_hp_bar" type="TextureProgress" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.4268
margin_top = 27.505
margin_right = -927.573
margin_bottom = -564.495
rect_scale = Vector2( 5, 5 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_score" type="Label" parent="."]
margin_left = 816.0
margin_top = 21.0
margin_right = 902.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stage_notifier" type="Label" parent="."]
margin_left = 36.9922
margin_top = 106.316
margin_right = 76.9922
margin_bottom = 128.316
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="stage_notifier"]

[node name="exp_node_container" type="VBoxContainer" parent="."]
margin_left = 896.851
margin_top = 554.558
margin_right = 944.851
margin_bottom = 594.558
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp_level" type="Label" parent="exp_node_container"]
margin_right = 48.0
margin_bottom = 14.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp_amt" type="TextureProgress" parent="exp_node_container"]
margin_top = 18.0
margin_right = 48.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character_type" type="TextureRect" parent="."]
margin_left = 26.3384
margin_top = 32.8435
margin_right = 66.3384
margin_bottom = 72.8436
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_rect" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mute_button" type="TextureButton" parent="."]
margin_left = 920.0
margin_top = 10.0
margin_right = 1070.0
margin_bottom = 160.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_button" type="Button" parent="."]
margin_left = 975.0
margin_top = 13.0
margin_right = 995.0
margin_bottom = 33.0
rect_scale = Vector2( 1.5, 1.5 )
text = "P"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_panel" type="Panel" parent="."]
pause_mode = 2
visible = false
margin_left = 387.0
margin_top = 200.0
margin_right = 637.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="pause_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 40.0
margin_right = -20.0
margin_bottom = -40.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_label" type="Label" parent="pause_panel/container"]
margin_right = 210.0
margin_bottom = 26.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "PAUSED"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unpause_button" type="Button" parent="pause_panel/container"]
margin_top = 46.0
margin_right = 210.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Back to game"

[node name="exit_button" type="Button" parent="pause_panel/container"]
margin_top = 92.0
margin_right = 210.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"

[node name="end_game_panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="end_game_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="verdict" type="Label" parent="end_game_panel/container"]
margin_right = 864.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="progress" type="Label" parent="end_game_panel/container"]
margin_top = 140.0
margin_right = 864.0
margin_bottom = 230.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1

[node name="score" type="Label" parent="end_game_panel/container"]
margin_top = 280.0
margin_right = 864.0
margin_bottom = 370.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1

[node name="container" type="HBoxContainer" parent="end_game_panel/container"]
margin_left = 342.0
margin_top = 420.0
margin_right = 521.0
margin_bottom = 440.0
size_flags_horizontal = 4
size_flags_vertical = 8
custom_constants/separation = 27
__meta__ = {
"_edit_use_anchors_": false
}

[node name="replay" type="Button" parent="end_game_panel/container/container"]
margin_right = 54.0
margin_bottom = 20.0
text = "Replay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="end_game_panel/container/container"]
margin_left = 81.0
margin_right = 179.0
margin_bottom = 20.0
text = "Quit to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transition" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_over_trans" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="game_over_trans"]
margin_left = 30.0
margin_top = 58.0
margin_right = 342.0
margin_bottom = 427.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="verdict" type="Label" parent="game_over_trans/VBoxContainer"]
margin_right = 312.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
text = "Your hardwork and bravery has allowed our beloved plushie to reach warmer waters. THANK YOU!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="game_over_trans/VBoxContainer"]
margin_top = 176.0
margin_right = 312.0
margin_bottom = 345.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="HBoxContainer" parent="game_over_trans/VBoxContainer"]
margin_left = 66.0
margin_top = 349.0
margin_right = 245.0
margin_bottom = 369.0
size_flags_horizontal = 4
size_flags_vertical = 8
custom_constants/separation = 27
__meta__ = {
"_edit_use_anchors_": false
}

[node name="replay" type="Button" parent="game_over_trans/VBoxContainer/container"]
margin_right = 54.0
margin_bottom = 20.0
text = "Replay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="game_over_trans/VBoxContainer/container"]
margin_left = 81.0
margin_right = 179.0
margin_bottom = 20.0
text = "Quit to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in_endscreen = SubResource( 11 )
anims/fade_in_transition = SubResource( 12 )
anims/fade_out_transition = SubResource( 13 )
[connection signal="tween_completed" from="stage_notifier/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="value_changed" from="exp_node_container/exp_amt" to="." method="_on_exp_amt_value_changed"]
[connection signal="pressed" from="mute_button" to="." method="_on_mute_button_pressed"]
[connection signal="pressed" from="pause_button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="pause_panel/container/unpause_button" to="." method="_on_unpause_button_pressed"]
[connection signal="pressed" from="pause_panel/container/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="end_game_panel/container/container/replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="end_game_panel/container/container/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="game_over_trans/VBoxContainer/container/replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="game_over_trans/VBoxContainer/container/quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
